# src/app/core/api/stingify/services.ts
@@ -1,4 +1,5 @@
 export { UserControllerService } from './services/user-controller.service';
+export { RecurringAmountsControllerService } from './services/recurring-amounts-controller.service';
 export { MacroCategoryControllerService } from './services/macro-category-controller.service';
 export { CategoryControllerService } from './services/category-controller.service';
 export { BudgetBookControllerService } from './services/budget-book-controller.service';
